--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,21 @@
-<div class="container my-4">
-  <div class=" d-flex">
-    
-      <span class="border m-2 p-2">
-        dashboard
-      </span>
-      <span  routerLink="/profiles" class="border m-2 p-2">
-        profile
-      </span>
-      <span  routerLink="/saveLists" class="border m-2 p-2">
-        save list
-      </span>
-      
-  </div>
-  <div style="height:50px;min-height:25px" class="row" >
-    <app-search-bar></app-search-bar>
-  </div>
-  <div style="height:400px;min-height:300px"  class="row">
-    <div class=" border">
-      <app-display-data [weatherData]="wData"></app-display-data>
-    </div>
-    <!-- <div class="col-md-6 border"><app-save-list></app-save-list></div> -->
-  </div>
-  <!-- <div style="height:200px;min-height:150px" class="row border">
-    <app-profile></app-profile>
-  </div> -->
+<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Weather Application</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+           
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/saveLists" href="#">Save List</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"  routerLink="/profiles" href="#">Profile</a>
+            </li>
+           
+          </ul>
+        </div>
+      </nav>
+    <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
