--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
            
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" routerLink="/saveLists" href="#">Save List</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link"  routerLink="/profiles" href="#">Profile</a>
             </li>
